--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    padding: 10px;
+    padding: 30px;
 }
 
 .color {
@@ -35,7 +35,7 @@ body {
     background: white;
 }
 
-.limpar {
+.clear {
     border: none;
     padding: 3px 20px;
     margin: 10px 0px;
